[package]
name = "bittorent_daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bincode = "2.0.1"
thiserror.workspace = true
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bittorrent_core = { path = "../bittorrent_core" }
rand = "0.9.1"
reqwest = "0.12.15"
urlencoding = "2.1.3"
config = { version = "0.15.11", features = ["toml", "yaml", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
directories = "6.0.0"
