[package]
name = "bittorrent_core"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4"
rand = "0.9"
reqwest = { version = "0.12.15" }
sha1 = "0.10"
thiserror.workspace = true
tokio.workspace = true
tokio-util = "0.7.15"
bytes = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.5"
futures = "0.3.31"
